# YOLOXY

./: .gitignore  LICENSE  README.md  detect.py  export.py  requirements.txt  todo.txt  train.py  val.py
data/: coco1.yaml
data/cfg/: x-n-rep-sa.yaml  x-n-rep.yaml  x-n6.yaml  yolov7.yaml
data/datasets/: WIDER-FACE-5.yaml  cards.yaml  coco-kpts.yaml  coco128-seg.yaml  coco128.yaml  kpt-1.yaml  lego.yaml  nail.yaml
data/docs/: acnet-2png
data/hyps/: high.yaml  hyp.Objects365.yaml  hyp.VOC.yaml  hyp.scratch-med.yaml  hyp.scratch-x.yaml  low.yaml  m.yaml  med.yaml  n.yaml  s.yaml  x.yaml
data/projects/: FADID-FACE-19.yaml  cellphone-calling.yaml  coco-kpts-100.yaml  coco-kpts.yaml  coco.yaml  coco128.yaml  face-19.yaml  wider-face.yaml
deploy/RKNN/: CMakeLists.txt  README.md
deploy/RKNN/include/: BYTETracker.h  STrack.h  baseStruct.h  wallCrossing.h  yolo.h
deploy/RKNN/src/: BYTETracker.cpp  STrack.cpp  lapjv.cpp  main.cpp  utils.cpp  yolo.cpp
models/: activations.py  assigner.py  common.py  experimental.py  head.py  losses.py  nms.py  xt-n-rep.yaml  xt-n.yaml  xt-s.yaml  yolo.py
models/cfg/: 5n.yaml  n-baseline.yaml  n.yaml  s-baseline.yaml  s-conv-ese.yaml  s-focus.yaml  s-mix-lcsp-1221-1111-attn.yaml  s-rep-asymconv.yaml  s-rep-ese-asymconv.yaml  s-rep-ese.yaml  s-rep.yaml  s.yaml  s6-conv.yaml  xs-ese-asymconv.yaml  xs-ese-conv.yaml  xs.yaml  (+5 more)
tools/: detect.py  export.py  train.py  val.py
utils/: augmentations.py  autoanchor.py  autobatch.py  benchmarks.py  callbacks.py  dataloaders.py  downloads.py  general.py  metrics.py  plots.py  torch_utils.py
(+77 files in other folders)
